# pysideqwt

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.txt  build.sh  cmake_install.cmake  license.txt  makefile  setup.py
qt4examples/: CartesianDemo.py  CliDemo.py  CurveDemo1.py  DialDemo.py  EventFilterDemo.py  MaskedDataDemo.py  PickerDemo.py  lib.py  qwt_test_override.py
qwt/: CMakeLists.txt  CTestTestfile.cmake  _module_wrapper.cpp  _python.h  cmake_install.cmake  global.h  pyside_global.h  qwt_objects.txt  typesystem_qwt.xml
qwt/PySideQwt/: pysideqwt_python.h  qwtplot_wrapper.h  qwtplotcurve_wrapper.h  qwtplotitem_wrapper.h
src/: __init__.py
tests/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  qwt_test.py  works.txt
tests/qt4examples/: BarPlotDemo.py  BodeDemo.py  CPUplot.py  CurveDemo2.py  CurveDemo3.py  DataDemo.py  ErrorBarDemo.py  HistogramDemo.py  ImagePlotDemo.py  MapDemo.py  MultiDemo.py  RadioDemo.py  ReallySimpleDemo.py  SimpleDemo.py  SliderDemo.py  SpectrogramDemo.py  lib.py
